Fix gaps and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ main div:nth-child(6) {
 }
 
 figcaption {
-  margin: 1rem 1.5rem 0;
+  margin: 1.5rem 1.5rem 0;
   font-size: 1.5rem;
   font-weight: normal;
   font-style: italic;
